deployment/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: serv-steam-ms
spec:
  selector:
    app: steam-ms
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: steam-ms
spec:
  selector:
    matchLabels:
      app: steam-ms
  replicas: 1
  template:
    metadata:
      labels:
        app: steam-ms
    spec:
      containers:
      - name: steam-ms
        image: gcr.io/steamchat/steam-ms:latest
        ports:
        - containerPort: 5000
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 30
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 30
          periodSeconds: 10
