deployment/ingress-lb.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: steamchat-ingress-lb
  annotations:
    kubernetes.io/ingress.global-static-ip-name: steamchat-ip
    networking.gke.io/managed-certificates: steamchat-cert
spec:
  rules:
  - http:
      paths:
      - path: /steam/*
        backend:
          serviceName: serv-steam-ms
          servicePort: 8080
      - path: /chat/*
        backend:
          serviceName: serv-chat-ms
          servicePort: 8080
